syntax = "proto3";

option go_package = "sigmaos/socialnetwork/proto";

service MeaningOfLife {
  rpc FindMeaning(MoLRequest) returns (MoLResult);
}

message MoLRequest {
  string name = 1;
}

message MoLResult {
  float meaning = 1;
}
